[gd_scene load_steps=14 format=2]

[ext_resource path="res://Audio/ChallengeMusic.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=3]
[ext_resource path="res://sprites/background/sky bg.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/rounded rectangular popup.png" type="Texture" id=5]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://PixulBrush.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/buttons or icons/create challenge button.png" type="Texture" id=8]
[ext_resource path="res://Game Play/Challenge/ChallengeNotifPage.gd" type="Script" id=9]
[ext_resource path="res://Game Play/Challenge/ChallengeNotifDetails.tscn" type="PackedScene" id=10]

[sub_resource type="PackedScene" id=1]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "ChallengeNotifPanel", "CanvasLayer", "ChallengeNotifDetails", "ChallengeNotifDetails2", "offset", "transform", "ChallengeNotifDetails3", "offset", "transform" ),
"node_count": 4,
"node_paths": [ NodePath("."), NodePath("."), NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 0, 0, 1073741824, 0, 2147483647, 2, 0, 0, 0, 1073741825, 0, 2147483647, 3, 1, 2, 4, 2, 5, 3, 0, 1073741826, 0, 2147483647, 6, 4, 2, 7, 5, 8, 6, 0 ),
"variants": [ ExtResource( 10 ), ExtResource( 10 ), Vector2( 0, 150 ), Transform2D( 1, 0, 0, 1, 0, 150 ), ExtResource( 10 ), Vector2( 0, 300 ), Transform2D( 1, 0, 0, 1, 0, 300 ) ],
"version": 2
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 7 )

[node name="ChallengeNotifPage" type="CanvasLayer"]
script = ExtResource( 9 )
Details = ExtResource( 10 )
Panel = SubResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 54.7347
margin_top = 136.246
margin_right = 150.735
margin_bottom = 216.246
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoticePopup" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -468.0
margin_right = 767.0
margin_bottom = 470.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengePageLabel" type="Label" parent="NoticePopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -408.0
margin_top = 105.0
margin_right = 408.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
text = "Challenge Status "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateChallengeButton" type="TextureButton" parent="NoticePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -335.5
margin_top = -218.0
margin_right = 368.5
margin_bottom = -90.0
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NoticePopup"]
margin_left = 128.0
margin_top = 216.0
margin_right = 1416.0
margin_bottom = 696.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NoticePopup/ScrollContainer"]
custom_constants/separation = 150
alignment = 1

[node name="Loading" type="RichTextLabel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/normal = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "																		
																		
																		
																		
																												LOADING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChallengeMusic" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="NoticePopup/CreateChallengeButton" to="." method="_on_CreateChallengeButton_pressed"]
